# qe_scope

./: .gitignore  ARCHITECTURE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: criticality.yaml  spec-lock.json
scripts/: ci-check.sh  refresh-all.sh
src/scope/: __init__.py  config.py  inventory.py  java_analysis.py  prune.py  report.py  runtime.py  tag_coverage.py
src/scope/assets/: dashboard.css  dashboard.js
tests/: conftest.py  test_scope.py
tests/fixtures/coverage/: pom.xml
tests/fixtures/coverage/specs/: widget-api.yaml
tests/fixtures/coverage/src/: WidgetSteps.java
tests/fixtures/features/: mini.feature
tests/fixtures/runners/: MiniRunner.java
tests/fixtures/src/: IMiniStore.java  IMiniStoreV2.java  MiniApiClient.java  MiniService.java  MiniSteps.java  MiniStoreImpl.java  MiniUploadUtils.java  NoisyHomonym.java  StreamDispatcher.java
